tests/fixtures/invalid/parenthesized_pointer_declaration.c
int main(void) {
    int (*row)[3];
    return 0;
}
